# Prog1HF

./: CMakeLists.txt  NHF.cbp  NHF.cscope_file_list  NHF.depend  NHF.layout  debugmalloc.h  init.c  init.h  kinezet.c  kinezet.h  lemez_fgk.c  lemez_fgk.h  lemezek.txt  listazas.c  listazas.h  main.c  menu.c  menu.h  rendezes.c  rendezes.h  strukturak.h  zene_fgk.c  zene_fgk.h  zenek.txt
